--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
       <h1 class="mela">Mela</h1>
       <p>Connecting People all over
          the world</p>
-      <!-- download: rename -->
       <a href="#your-apk-url" download="mela">Download</a>
     </div>
     <img class="logo" src="./assets/img/mela_logo.png" />
@@ -171,8 +170,7 @@
 
   <section class="content-block start-and-email">
     <h2>Start Your Journey in Mela</h2>
-    <!-- Replace with your email -->
-    <a href="mailto:youremail@domain.com">Email us</a>
+    <a href="mela.live.help@outlook.com">Email us</a>
   </section>
 
   <section class="content-block footer">
