--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <h1 class="mela">Mela</h1>
       <p>Connecting People all over
          the world</p>
-      <a href="#your-apk-url" download="mela">Download</a>
+      <a href="https://github.com/mix99/livechat/releases/download/v1.1.4/vfun1012.apk" download="mela">Download</a>
     </div>
     <img class="logo" src="./assets/img/mela_logo.png" />
   </section>
@@ -170,7 +170,7 @@
 
   <section class="content-block start-and-email">
     <h2>Start Your Journey in Mela</h2>
-    <a href="mela.live.help@outlook.com">Email us</a>
+    <a href="mailto:mela.live.help@outlook.com">Email us</a>
   </section>
 
   <section class="content-block footer">
