--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="user-scalable=no, initial-scale=1.0, width=device-width, maximum-scale=1.0, minimal-ui">
   <title>Mela</title>
+  <link rel="shortcut icon" href="./favicon.ico">
   <style>
     html, body {
       padding: 0;
@@ -146,7 +147,7 @@
       <h1 class="mela">Mela</h1>
       <p>Connecting People all over
          the world</p>
-      <a href="https://github.com/mix99/livechat/releases/download/v1.1.4/vfun1012.apk" download="mela">Download</a>
+      <a href="https://github.com/mix99/livechat/releases/download/v1.1.6/melaApk1107.apk" download="mela">Download</a>
     </div>
     <img class="logo" src="./assets/img/mela_logo.png" />
   </section>
