--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="mela">Mela</h1>
       <p>Connecting People all over
          the world</p>
-      <a href="https://github.com/mix99/livechat/releases/download/v1.1.6/melaApk1107.apk" download="mela">Download</a>
+      <a href="https://github.com/mix99/livechat/releases/download/v1.1.6/apk1230_mela1.apk" download="mela">Download</a>
     </div>
     <img class="logo" src="./assets/img/mela_logo.png" />
   </section>
